updated css and html

--- a/index.html
+++ b/index.html
@@ -47,32 +47,37 @@
         <button type="submit" class="btn">Adicionar item</button>
       </div>
 
-      <div>
-        <label for="itens">Pão de forma</label>
-        <input type="checkbox" name="item-1" id="item-1">
-        <img src="assets/icon-lix.svg.svg" alt="icone de lixeira">
+      <div class="items">
+        <input type="checkbox" name="item-1" id="item-1" class="checkbox">
+        <label for="item-1">Pão de forma</label>
+        <img src="assets/icon-lix.svg.svg" alt="icone de lixeira" class="trash">
       </div>
 
-      <div>
-        <label for="itens">Café preto</label>
-        <input type="checkbox" name="item-2" id="item-2">
-        <img src="assets/icon-lix.svg.svg" alt="icone de lixeira">
+      <div class="items">
+        <input type="checkbox" name="item-2" id="item-2" class="checkbox">
+        <label for="item-2">Café preto</label>
+        <img src="assets/icon-lix.svg.svg" alt="icone de lixeira" class="trash">
       </div>
 
-      <div>
-        <label for="itens">Suco de laranja</label>
-        <input type="checkbox" name="item-3" id="item-3">
-        <img src="assets/icon-lix.svg.svg" alt="icone de lixeira">
+      <div class="items">
+        <input type="checkbox" name="item-3" id="item-3" class="checkbox">
+        <label for="item-3">Suco de laranja</label>
+        <img src="assets/icon-lix.svg.svg" alt="icone de lixeira" class="trash">
       </div>
 
-      <div>
-        <label for="itens">bolacha</label>
-        <input type="checkbox" name="item-4" id="item-4">
-        <img src="assets/icon-lix.svg.svg" alt="icone de lixeira">
+      <div class="items">
+        <input type="checkbox" name="item-4" id="item-4" class="checkbox">
+        <label for="item-4">bolacha</label>
+        <img src="assets/icon-lix.svg.svg" alt="icone de lixeira" class="trash">
       </div>
-
 
     </form>
+
+    <div class="remove">
+      <img src="assets/icon-atencao-svg.svg" alt="" class="icon-2">
+      <p> O item foi removido da lista</p>
+      <img src="assets/icon-delete.svg.svg" alt="" class="delete">
+    </div>
 
     <script src="scripts.js"></script>
   </header>
